--- a/复习笔记.md
+++ b/复习笔记.md
@@ -2235,7 +2235,7 @@ todo
 
 在遗传算法中，通过随机方式产生若干个所求解问题的数字编码，即染色体，形成初始群体；通过适应度函数给每个个体一个数值评价，淘汰低适应度的个体，选择高适应度的个体参加遗传操作，经过遗传操作后的个体集合形成下一代新的种群。对这个新种群进行下一轮进化。
 
-#### 步骤
+#### 遗传算法步骤
 
 1. 初始化群体;
 2. 计算群体上每个个体的适应度值;
@@ -2291,6 +2291,22 @@ todo
 4. 若运动路径附近的数据与背负的数据相似性高于设置的标准则将其放置在该位置，然后继续移动
 5. 重复上述数据搬运过程
 
+## 习题
+
+### 4-1 计算智能的含义是什么？它涉及哪些研究分支？
+
+1. 含义：贝兹德克认为计算智能取决于制造者提供的数值数据，而不依赖于知识。计算智能是智力的低层认知。
+2. 主要的研究领域：神经计算，模糊计算，进化计算，人工生命。
+
+### 4-6 设计一个神经网络，用于计算含有两个输入的XOR函数。
+
+[详见](#神经网络实现异或逻辑)
+
+### 4-14 试述遗传算法的基本原理，并说明遗传算法的求解步骤？
+
+1. [基本原理](#基本原理)
+2. [步骤](#遗传算法步骤)
+
 # 第6章 机器学习
 
 ## 机器学习的定义
@@ -2315,6 +2331,9 @@ todo
 ## 基本结构
 
 1. 推理：环境、学习、知识库、执行
+
+   ![image-20230502222807075](assets/image-20230502222807075.png)
+
 2. 统计：学习模型、历史数据、新数据、未知属性
 
 ## 归纳学习
@@ -2584,3 +2603,36 @@ Hopfield网络是一种具有正反相输出的带反馈人工神经元。
 ### 应用
 
 机器博弈、计算机视觉、语音识别、机器人…
+
+## 习题
+
+### 6-1 什么是学习和机器学习?为什么要研究机器学习?
+
+1. **学习**就是系统在不断重复的工作中对本身能力的增强或者改进，使得系统在下一次执行同样任务或类似任务时，会比现在做得更好或效率更高。
+2. **机器学习**是研究如何使用机器来模拟人类学习活动的一门学科，是机器学习是一门研究机器获取新知识和新技能，并识别现有知识的学问。这里所说的“机器”，指的就是计算机。
+3. 原因：现有的计算机系统和人工智能系统没有什么学习能力，至多也只有非常有限的学习能力，因而不能满足科技和生产提出的新要求。
+
+### 6-2 试述机器学习系统的基本结构，并说明各部分的作用。
+
+![image-20230502222807075](assets/image-20230502222807075.png)
+
+1. 环境向系统的学习部分提供某些信息
+2. 学习部分利用这些信息修改知识库，以增进系统执行部分完成任务的效能
+3. 执行部分根据知识库完成任务，同时把获得的信息反馈给学习部分。
+
+影响学习系统设计的最重要的因素是环境向系统提供的信息。更具体地说是信息的质量。
+
+### 6-4 决策树学习的主要学习算法
+
+[以ID3为例](#决策树学习算法ID3★)
+
+### 6-9 用C语言编写一套计算机程序，用于执行 BP 学习算法
+
+BP算法实现步骤：
+
+1. 初始化
+2. 输入训练样本对，计算各层输出
+3. 计算网络输出误差
+4. 计算各层误差信号
+5. 调整各层权值
+6. 检查网络总误差是否达到精度要求。满足，则训练结束；不满足，则返回步骤2
