--- a/复习笔记.md
+++ b/复习笔记.md
@@ -1,8 +1,9 @@
 # 前言
 
-1. ★大概率必考
+1. ★大概率考
 2. ✦个人推测考点
-3. 致谢：[hwl](https://william3242.github.io/2023/04/29/%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD%E5%AF%BC%E8%AE%BA%E5%A4%8D%E4%B9%A0%E6%8C%87%E5%8D%97/)、lyf
+3. 没有完全覆盖“人工智能导论复习2023.pdf”的重点
+4. 致谢：[hwl](https://william3242.github.io/2023/04/29/%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD%E5%AF%BC%E8%AE%BA%E5%A4%8D%E4%B9%A0%E6%8C%87%E5%8D%97/)、lyf
 
 # 题型
 
@@ -10,19 +11,6 @@
 2. 综合：15分
 3. 设计：25分
 4. 开放题/论述题：10分
-
-# 重点
-
-1. 书p101例3.9，a卷考；ppt第三章例题3为b卷
-2. 图搜索：bfs等
-3. 启发式搜索：a*
-4. 对AI发展的看法以及研究热点
-
-# 书上习题
-
-
-
-
 
 # 第1章 绪论
 
@@ -43,13 +31,11 @@
 
 ### 人工智能（学科）
 
-人工智能（学科)是计算机科学中涉及研究、设计和应用智能机器的一个分支。近期主要目标在于研究用机器来模仿和执行人脑的某些智力功能，并开发相关理论和技术。
+人工智能（学科）是计算机科学中涉及研究、设计和应用智能机器的一个分支。近期主要目标在于研究用机器来模仿和执行人脑的某些智力功能，并开发相关理论和技术。
 
 ### 人工智能（能力）
 
 人工智能（能力）是智能机器所执行的通常与人类智能有关的智能行为，如判断、推理、证明、识别、感知、理解、通信、设计、思考、规划、学习和问题求解等思维活动。
-
-### 定义
 
 ## 人工智能的发展
 
@@ -314,7 +300,7 @@
 
    问题求解(下棋程序)，逻辑推理与定理证明(四色定理证明)，自然语言理解，自动程序设计，专家系统，机器学习，神经网络，机器人学(星际探索机器人)，模式识别(手写识别，汽车牌照识别，指纹识别)，机器视觉(机器装配，卫星图像处理)，智能控制，智能检索，智能调度与指挥(汽车运输高度，列车编组指挥)，系统与语言工具
 
-2. 新的研究热点
+2. 新的[研究热点](#研究热点)
 
    分布式人工智能与Agent，计算智能与进化计算，数据挖掘与知识发现(超市市场商品数据分析)，人工生命
 
@@ -1136,6 +1122,8 @@ A computer system is intelligent if it can perform a task which,if performed by 
 
 ## 图搜索策略
 
+> 4种搜索算法（无信息：DFS、BFS；有信息（启发式）：A、A*）选1种考
+
 ### 分类
 
 ![image-20230501172708859](assets/image-20230501172708859.png)
@@ -1250,6 +1238,18 @@ A computer system is intelligent if it can perform a task which,if performed by 
 
 ![image-20230501175736441](assets/image-20230501175736441.png)
 
+##### 例题
+
+八数码难题（8-puzzle problem） 
+
+![image-20230502124930042](assets/image-20230502124930042.png)
+
+规定：将牌移入空格的顺序为：从空格左边开始顺时针旋转。不许斜向移动，也不返回先辈节点。
+
+从下图（八数码难题的宽度优先搜索树）所示，要扩展26个节点，共生成46个节点之后才求得解（目标节点）。
+
+![image-20230503101055709](assets/image-20230503101055709.png)
+
 #### 等代价搜索
 
 ##### 定义
@@ -1317,7 +1317,7 @@ f(x)=g(x)
 
 f(x)=g(x)+h(x)
 
-#### A\*算法
+#### A\*算法✦
 
 > A\*算法只要有解，就一定是最佳解
 
@@ -1503,6 +1503,8 @@ f(x)=g(x)+h(x)
 4. 应用消解原理，力图推导出一个表示矛盾的空子句
 
 ###### 例题
+
+> 其它的例题也可能考，但储蓄问题考的可能性最大
 
 1. 储蓄问题★（A卷）
 
@@ -1944,7 +1946,7 @@ f(x)=g(x)+h(x)
 
 前馈网络具有递阶分层结构，由同层神经元间不存在互连的层级组成
 
-#### 学习算法
+#### 学习算法✦
 
 ##### 有师学习
 
@@ -2383,6 +2385,8 @@ todo
 
 ### 决策树构造算法
 
+> CLS和ID3选一个考
+
 #### CLS
 
 ##### 算法流程
@@ -2636,3 +2640,31 @@ BP算法实现步骤：
 4. 计算各层误差信号
 5. 调整各层权值
 6. 检查网络总误差是否达到精度要求。满足，则训练结束；不满足，则返回步骤2
+
+# 开放题/论述题
+
+## 对AI发展的看法以及研究热点★
+
+> GPT-4
+
+### 看法
+
+人工智能在过去的几十年里取得了巨大的进步。随着计算能力的提高和大量数据的积累，深度学习和机器学习技术得 到了广泛的应用。AI已经渗透到了诸如自动驾驶、医疗诊断、语言翻译、虚拟助手等许多行业。在未来，我们预期AI 将在各个领域产生更多的影响，提高生产效率，改变人们的生活方式。 然而，AI发展也引发了一些关切。例如，隐私、数据安全、失业、道德伦理等问题需要解决。因此，政策制定者、研 究人员和产业界需要共同努力，确保AI技术的安全、可靠、公平和透明。
+
+### 研究热点
+
+1. 强化学习：通过让机器学习在特定环境中进行试错，以获取最佳策略的方法。在游戏、机器人控制和自动驾驶等领域有广泛应用。
+2. 生成对抗网络（GAN）：一种用于生成数据的深度学习方法，通过让两个神经网络相互竞争来提高生成数据的质量。广泛应用于图像合成、风格迁移等任务。
+3. 自然语言处理（NLP）：关注让计算机理解、生成和处理自然语言的技术。目前研究热点包括预训练语言模型、机器翻译、情感分析等。
+4. 计算机视觉：关注让计算机理解和处理图像或视频的技术。研究热点包括目标检测、人脸识别、图像分割等。
+5. 无监督学习和半监督学习：在训练数据缺乏标签的情况下，让机器学习模型自我学习的方法。这些方法在处理大量未标注数据时具有巨大潜力。
+6. 人工智能伦理和政策：关注AI技术带来的道德、法律和社会影响，以及如何制定相应的政策和规范。
+7. 机器学习的可解释性：让机器学习模型更加透明和可解释的研究。这有助于提高人们对AI系统的信任，增加模型的可靠性和安全性。
+8. 神经符号整合：探索将深度学习和传统符号逻辑相结合的方法，以解决AI系统在推理、抽象和知识表示方面的局限性。
+9. 多模态学习：让AI系统能够处理和理解来自多种感官（如视觉、听觉、触觉等）的信息。这有助于开发更加智能和
+   自适应的AI系统。
+10. 元学习（Meta-learning）：通过让AI系统自我学习如何学习，以提高模型在新任务和领域的泛化能力。
+11. 小样本学习：研究如何在少量标注数据的情况下，让机器学习模型实现高效的学习。这有助于降低AI系统对大量标
+    注数据的依赖。
+12. 安全AI：研究如何确保AI系统在各种条件下的安全性、稳定性和可控性，包括抵御对抗性攻击、防止模型崩溃等。
+13. 人工智能与心理学、神经科学的交叉研究：通过模仿人类大脑和认知过程来发展AI系统，以提高其智能和适应能力。
