--- a/复习笔记.md
+++ b/复习笔记.md
@@ -3,7 +3,7 @@
 1. ★大概率考
 2. ✦个人推测考点
 3. 没有完全覆盖“人工智能导论复习2023.pdf”的重点
-4. 致谢：[hwl](https://william3242.github.io/2023/04/29/%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD%E5%AF%BC%E8%AE%BA%E5%A4%8D%E4%B9%A0%E6%8C%87%E5%8D%97/)、lyf
+4. 致谢：[hwl](https://william3242.github.io/2023/04/29/%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD%E5%AF%BC%E8%AE%BA%E5%A4%8D%E4%B9%A0%E6%8C%87%E5%8D%97/)、lyf、lqx
 
 # 题型
 
@@ -108,6 +108,10 @@
 
 行为模拟法
 
+### 关系
+
+长期共存于与合作，取长补短，并走向融合和集成，为人工智能的发展做出贡献
+
 ## 人类智能与人工智能
 
 ### 认知过程
@@ -150,7 +154,11 @@
 
 ### 人工智能的要素
 
-知识、数据、算法、算力、人才
+1. **知识**是人工智能之源
+2. **数据**是人工智能之基
+3. **算法**是人工智能之魂
+4. **算力**是人工智能之力
+5. **人才**是人工智能发展的关键
 
 ## 人工智能系统分类
 
@@ -296,7 +304,7 @@
 
 ### 1-11 人工智能的主要研究和应用领域是什么？其中，哪些是新的研究热点？
 
-1. 主要研究和应用领域
+1. [主要研究和应用领域](#人工智能的研究与应用领域)
 
    问题求解(下棋程序)，逻辑推理与定理证明(四色定理证明)，自然语言理解，自动程序设计，专家系统，机器学习，神经网络，机器人学(星际探索机器人)，模式识别(手写识别，汽车牌照识别，指纹识别)，机器视觉(机器装配，卫星图像处理)，智能控制，智能检索，智能调度与指挥(汽车运输高度，列车编组指挥)，系统与语言工具
 
@@ -1226,9 +1234,10 @@ A computer system is intelligent if it can perform a task which,if performed by 
 
 1. 首先扩展最新产生的(即最深的)节点。
 2. OPEN表是栈
-3. 一般不能保证找到最优解。
-4. 当深度限制不合理时，可能找不到解，可以将算法改为可变深度限制，即有界深度优先搜索。
-5. 最坏情况时，搜索空间等同于穷举。
+3. CLOSED表是一个顺序表，表中各节点按顺序编号，正被考察的节点在表中编号最大。
+4. 一般不能保证找到最优解。
+5. 当深度限制不合理时，可能找不到解，可以将算法改为可变深度限制，即有界深度优先搜索。
+6. 最坏情况时，搜索空间等同于穷举。
 
 ##### 深度界限
 
@@ -1338,9 +1347,9 @@ f(x)=g(x)+h(x)
 
 ##### 八数码难题
 
-> h~1~(x)=错放棋子数，h~2~(x)=曼哈顿距离
-
 ![image-20230502124930042](assets/image-20230502124930042.png)
+
+###### h(x)=错放棋子数
 
 1. 估价函数的定义
 
@@ -1354,6 +1363,22 @@ f(x)=g(x)+h(x)
 2. 求解过程
 
    ![image-20230501183102895](assets/image-20230501183102895.png)
+
+###### h(x)=曼哈顿距离
+
+1. 估价函数的定义
+
+   f (x) = g (x) + h (x)
+
+   * g (x)：从初始状态到x需要进行的移动操作的次数
+
+   * h (x)：每一数码与其目标位置的曼哈顿距离
+
+     曼哈顿距离：两点之间水平距离和垂直距离之和
+
+2. 求解过程
+
+   ![image-20230503214250489](assets/image-20230503214250489.png)
 
 ## 消解原理/归结原理
 
@@ -2250,6 +2275,23 @@ todo
 #### 算法流程图
 
 ![image-20230502203519087](assets/image-20230502203519087.png)
+
+#### 精英策略
+
+##### 原因
+
+* 从理论上保证全局收敛性
+* 在实际执行中优化性能
+
+##### 定义
+
+在每一次迭代中群体中具有最高适应度的个体直接进入下一代群体，不参与交叉和变异
+
+#### 书上P160例题
+
+![image-20230503214737741](assets/image-20230503214737741.png)
+
+![image-20230503214743625](assets/image-20230503214743625.png)
 
 ## 人工生命
 
