--- a/复习笔记.md
+++ b/复习笔记.md
@@ -2,8 +2,9 @@
 
 1. ★大概率考
 2. ✦个人推测考点
-3. 没有完全覆盖“人工智能导论复习2023.pdf”的重点
-4. 致谢：[hwl](https://william3242.github.io/2023/04/29/%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD%E5%AF%BC%E8%AE%BA%E5%A4%8D%E4%B9%A0%E6%8C%87%E5%8D%97/)、lyf、lqx
+3. ※补充内容
+4. 没有完全覆盖“人工智能导论复习2023.pdf”的重点
+5. 致谢：[hwl](https://william3242.github.io/2023/04/29/%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD%E5%AF%BC%E8%AE%BA%E5%A4%8D%E4%B9%A0%E6%8C%87%E5%8D%97/)、lyf、lqx
 
 # 题型
 
@@ -19,23 +20,24 @@
 ### 智能
 
 * 思考与理解能力
-* 智能是一种应用知识处理环境的能力或由目标准则衡量的抽象思考能力
+* 智能是一种**应用知识处理环境**的能力或由目标准则衡量的**抽象思考**能力
 
 ### 智能机器
 
-* 一种能够呈现出人类智能行为的机器
+* 一种能够**呈现出人类智能行为**的机器
 
   > 智能行为：人类用大脑考虑问题或创造思想
 
-* 一种能在不确定环境中执行各种拟人任务并达到预期目标的机器
+* 一种能在**不确定**环境中执行**各种拟人任务**并**达到预期目标**的机器
 
 ### 人工智能（学科）
 
-人工智能（学科）是计算机科学中涉及研究、设计和应用智能机器的一个分支。近期主要目标在于研究用机器来模仿和执行人脑的某些智力功能，并开发相关理论和技术。
+* 人工智能（学科）是计算机科学中涉及**研究、设计和应用智能机器**的一个**分支**。
+* 近期主要目标在于研究用机器来**模仿和执行人脑的某些智力功能**，并开发相关理论和技术。
 
 ### 人工智能（能力）
 
-人工智能（能力）是智能机器所执行的通常与人类智能有关的智能行为，如判断、推理、证明、识别、感知、理解、通信、设计、思考、规划、学习和问题求解等思维活动。
+人工智能（能力）是智能机器所执行的通常**与人类智能有关的智能行为**，如判断、推理、证明、识别、感知、理解、通信、设计、思考、规划、学习和问题求解等思维活动。
 
 ## 人工智能的发展
 
@@ -57,6 +59,15 @@
 5. 国家战略
 
 ## 人工智能的各种认知观
+
+### 对比
+
+|                  | 符号主义                             | 连接主义                               | 行为主义                        |
+| ---------------- | ------------------------------------ | -------------------------------------- | ------------------------------- |
+| 认为人工智能源于 | 数理逻辑                             | 仿生学                                 | 控制论                          |
+| 原理             | 基于物理符号系统假设和有限合理性原理 | 基于神经网络及其间的连接机制与学习算法 | 基于控制论及感知—动作型控制系统 |
+| 基本单元         | 符号                                 | 神经元                                 | 感知和行动                      |
+| 研究方法         | 功能模拟法                           | 结构模拟法                             | 行为模拟法                      |
 
 ### 符号主义/逻辑主义/心理学派
 
@@ -133,7 +144,8 @@
 
 ### 假设/假说
 
-系统智能，必定具备上述6种功能；系统具有上述6中功能，能够表现出智能
+* 系统智能，必定具备上述6种功能；
+* 系统具有上述6种功能，能够表现出智能
 
 ### 三个推论
 
@@ -274,6 +286,12 @@
 * 从学科角度来看：人工智能是计算机科学中涉及研究、设计和应用智能机器的一个分支。
   * 它的近期主要目标在于研究用机器来模仿和执行人脑的某些智能功能，并开发相关理论和技术。
 * 从能力角度来看：人工智能是智能机器所执行的通常与人类智能有关的功能，如判断、推理、证明、识别、感知、理解、设计、思考、规划、学习和问题求解等思维活动
+
+###  1-5 为什么能够用机器(计算机)模仿人的智能?※
+
+1. [符号系统6种基本功能](#符号系统6种基本功能)
+1. [假设/假说](#假设/假说)
+1. [三个推论](#三个推论)
 
 ### 1-6 现在人工智能有哪些学派？它们的认知观是什么？
 
@@ -1533,6 +1551,8 @@ f(x)=g(x)+h(x)
 
 1. 储蓄问题★（A卷）
 
+   > 本题会有部分改动，会放在一个题目的中间，要认真审题，步骤环环相扣
+
    1. 前提：每个储蓄钱的人都获得利息。
 
    2. 结论：如果没有利息，那么就没有人去储蓄钱
@@ -1758,7 +1778,7 @@ f(x)=g(x)+h(x)
 
 ###### 实质
 
-根部为NIL 变换为 根部为回答语句
+根部为 NIL 变换为根部为回答语句
 
 ###### 例题
 
@@ -1826,6 +1846,10 @@ f(x)=g(x)+h(x)
 
 重排的原则当视具体需求而定，不同的原则对应着不同的搜索策略，如果想尽快地找到一个解，则应当将最有可能达到目标节点的那些节点排在OPEN表的前面部分，如果想找到代价最小的解，则应当按代价从小到大的顺序重排OPEN表。
 
+###  3-4 如何通过消减反演求取问题的答案？※
+
+[详见反演求解的过程](#反演求解)
+
 ### 3-7 下列八数码难题：用A\*算法绘出八数码难题的搜索树；标记OPEN表、CLOSED表的节点；写出从初始状态到目标状态的最优解
 
 [详见](#八数码难题)
@@ -1855,31 +1879,31 @@ f(x)=g(x)+h(x)
 
 2. (∀x)(∀y)(On(x,y)→Above(x,y))
 
+     1. 消去蕴含符号：(∀x)(∀y)(~On(x,y)∨Above(x,y))
 
-   1. 消去蕴含符号：(∀x)(∀y)(~On(x,y)∨Above(x,y))
+     2. 2-6 无需进行操作
 
-   2. 2-6 无需进行操作
+     3. 消去全称量词：~On(x,y)∨Above(x,y)
 
-   3. 消去全称量词：~On(x,y)∨Above(x,y)
+     4. 8-9 无需进行操作
 
-   4. 8-9 无需进行操作
 
 3. (∀x)(∀y)(∀z)(Above(x,y)∧Above(y,z)→Above(x,z))
 
    > 蕴含的优先级低于∧
+   
+      1. 消去蕴含符号：(∀x)(∀y)(∀z)(\~(Above(x,y)∧Above(y,z))∨Above(x,z))
+   
+      1. 减少否定符号的辖域：(∀x)(∀y)(∀z)(\~Above(x,y)∨\~Above(y,z)∨Above(x,z))
+   
+      1. 3-6. 无需进行操作
+   
+      1. 消去全称量词：\~Above(x,y)∨\~Above(y,z)∨Above(x,z)
+   
+      1. 8-9 无需进行操作
 
 
-   1. 消去蕴含符号：(∀x)(∀y)(∀z)(~(Above(x,y)∧Above(y,z))∨Above(x,z))
-
-   2. 减少否定符号的辖域：(∀x)(∀y)(∀z)(\~Above(x,y)∨\~Above(y,z)∨Above(x,z))
-
-   3. 3-6. 无需进行操作
-
-   4. 消去全称量词：\~Above(x,y)∨\~Above(y,z)∨Above(x,z)
-
-   5. 8-9 无需进行操作
-
-4. ~((∀x)P(x)→((∀y)(P(y)→P(f(x,y)))∧(∀y)(Q(x,y)→P(y)))))
+4. \~((∀x)P(x)→((∀y)(P(y)→P(f(x,y)))∧(∀y)(Q(x,y)→P(y)))))
 
    > 太难了，赌它不考
 
@@ -2351,6 +2375,10 @@ todo
 1. [基本原理](#基本原理)
 2. [步骤](#遗传算法步骤)
 
+###  4-16 [用遗传算法求f(x)=xcosx+2的最大值※](https://blog.csdn.net/ErinWang666/article/details/126216970)
+
+![image-20230504200410037](assets/image-20230504200410037.png)
+
 # 第6章 机器学习
 
 ## 机器学习的定义
@@ -2411,7 +2439,7 @@ todo
 
 ##  决策树学习
 
-### 决策树
+### 决策树定义
 
 1. 通过把实例从根节点排列到某个叶子节点来分类实例。
 2. 叶子节点即为实例所属的分类
@@ -2668,9 +2696,17 @@ Hopfield网络是一种具有正反相输出的带反馈人工神经元。
 
 影响学习系统设计的最重要的因素是环境向系统提供的信息。更具体地说是信息的质量。
 
+###  6-3 简介决策树学习的结构※
+
+[详见](#决策树定义)
+
 ### 6-4 决策树学习的主要学习算法
 
 [以ID3为例](#决策树学习算法ID3★)
+
+###  6-8 试比较说明符号系统和连接机制在机器学习中的主要思想※
+
+[详见人工智能的各种认知观的对比部分](#人工智能的各种认知观)
 
 ### 6-9 用C语言编写一套计算机程序，用于执行 BP 学习算法
 
@@ -2682,6 +2718,18 @@ BP算法实现步骤：
 4. 计算各层误差信号
 5. 调整各层权值
 6. 检查网络总误差是否达到精度要求。满足，则训练结束；不满足，则返回步骤2
+
+###  什么是知识发现？知识发现与数据挖掘有何关系？※
+
+1. [知识发现的定义](#知识发现)
+
+2. 关系
+
+   数据挖掘是知识发现中的一个步骤，它主要是利用某些特定的知识发现算法，在一定的运算效率内，从数据中发现出有关的知识。
+
+###  什么是深度学习？它有何特点？※
+
+[详见深度学习的定义和特点](#深度学习)
 
 # 开放题/论述题
 
